--- a/client-deployment.yml
+++ b/client-deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: client-Deployment
+    name: client-deployment
 spec:
     replicas: 1
     selector:
@@ -14,6 +14,6 @@ spec:
         spec:
             containers:
               - name: client
-                image: nomanaadma/multi-worker
+                image: nomanaadma/multi-client
                 ports:
-                    containerPort: 3000
+                  - containerPort: 3000
